# python-backend-monorepo-2025-q4

./: .codecov.yml  .cursorignore  .dockerignore  .gitignore  ARCHITECTURE.md  BUILD  Makefile  README.md  TECHNICAL_DECISIONS.md  docker-compose.yml  env.example  pants.toml  pyproject.toml
.github/workflows/: codecov.yml  coverage.yml
libs/: BUILD
libs/auth/: BUILD  api_key.py
libs/common/: BUILD  errors.py  http_client.py  jsonapi.py  logging.py  middleware.py
libs/common/tests/: BUILD  test_errors.py  test_jsonapi.py
proto/products/: products.proto
scripts/: generate_proto.sh
services/: BUILD
services/inventory/: BUILD  Dockerfile  main.py
services/inventory/api/: dependencies.py  routes.py  routes_v1.py  schemas.py  serializers.py  versioning.py
services/inventory/application/: get_inventory.py  update_inventory.py
services/inventory/domain/: entities.py  ports.py
services/inventory/infrastructure/: mongodb_repository.py
services/inventory/infrastructure/database/: models.py
services/inventory/infrastructure/grpc/: products_grpc_client.py
services/inventory/seeds/: seed_inventory.py
services/inventory/tests/: BUILD  conftest.py
services/inventory/tests/test_application/: test_get_inventory.py  test_update_inventory.py
services/inventory/tests/test_domain/: test_entities.py
services/products/: BUILD  Dockerfile  alembic.ini  main.py
services/products/api/: dependencies.py  routes.py  routes_v1.py  schemas.py  serializers.py  versioning.py
services/products/application/: create_product.py  delete_product.py  get_product.py  list_products.py  update_product.py
services/products/domain/: entities.py  ports.py
services/products/infrastructure/: redis_cache.py  supabase_repository.py
services/products/infrastructure/database/: models.py
services/products/infrastructure/grpc/: grpc_server.py
services/products/migrations/: env.py
services/products/seeds/: __init__.py  seed_products.py
services/products/tests/: BUILD  conftest.py
(+9 files in other folders)
